Revised for Java 11
which is more easily installed via Homebrew